fix anchored button not showing on mobile_main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2131,7 +2131,8 @@ input, select, textarea {
 				}
 
 				.main.style2 .button.anchored {
-					display: none;
+					/*display: none;*/
+					display: block !important;
 				}
 
 				.main.style2 .content {
